首页 列表页静态页面基本完成，正在进行详情页静态操作

--- a/src/html/mia-list.html
+++ b/src/html/mia-list.html
@@ -156,11 +156,394 @@
 				德国原装
 				<em>Aptamil</em>
 			</div>
-			<div class="kind-list">
-				<div class="show"><img src="img/list-kindshow.png"/></div>
+			<div class="kind-list clearfix">
+				<div class="show">
+					<img src="img/list-kindshow.png"/>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind1.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind2.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind3.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind4.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind1.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind2.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind3.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind4.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind1.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind2.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind3.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list-nfkind4.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				
 			</div>
 		</div>
-		
+		<div class="content-kind">
+			<div class="kind-title">
+				<i class="flag flagDE"></i>
+				荷兰原装
+				<em>Nutrilon</em>
+			</div>
+			<div class="kind-list clearfix">
+				<div class="show">
+					<img src="img/list2-kindshow.jpg"/>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind1.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind2.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind3.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind4.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind1.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind3.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind4.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind1.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind2.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind3.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				<div class="goods">
+					<div class="goods-show">
+						<div class="goods-pic">
+							<span>全球购</span>
+						</div>
+						<a href=""><img src="img/list2-nfkind4.jpg" alt="" /></a>
+					</div>
+					<div class="goods-price">
+						<span class="p1">¥</span>
+						<span class="p2">536.00</span>
+						<span class="p3">¥1032.00</span>
+					</div>
+					<div class="goods-text">
+						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
+					</div>
+				</div>
+				
+			</div>
+		</div>
 	</div>
 	
 	<div id = "footer" class="footer">
