首页 列表页已经基本完成，详情页已经做好接近一半

--- a/src/html/mia-product.html
+++ b/src/html/mia-product.html
@@ -91,16 +91,16 @@
 		</div>
 		<div class="inwrap-content">
 			<div class="w1100">
-				<div class="detail">
+				<div class="detail clearfix">
 					<div class="left">
 						<div class="big">
 							<img src="img/product-big1.jpg">
 						</div>
 						<div class="small">
 							<img src="img/product-big1.jpg" />
-							<img src="img/product-big1.jpg" />
-							<img src="img/product-big1.jpg" />
-							<img src="img/product-big1.jpg" />
+							<img src="img/product-big2.jpg" />
+							<img src="img/product-big3.jpg" />
+							<img src="img/product-big4.jpg" />
 						</div>
 					</div>
 					<div class="right">
@@ -109,8 +109,65 @@
 								<a target="_blank" href="">金雀</a>
 								<span>小兔杰瑞情商培育绘本系列第二辑全8册</span>
 							</div>
+							<div class="titleintro">
+								<span>小兔杰瑞第2辑受到广大读者及幼儿园的广泛关注，被诸多幼儿园列为重点采购及推荐图书，2015年初更被北京电视台报道，堪称能与国外绘本比肩的中国原创绘本。</span>                            
+							</div>
+							<div class="pricebox">
+								<span class="tit">售价</span>
+								<span class="new">
+									<i>¥</i>
+									<em>45.00</em>
+								</span>
+								<span class="old">¥86.40</span>
+							</div>
+							<dl class="color">
+								<dt>可选</dt>
+								<dd>
+									<a href=""><img src="img/product-small.jpg"></a>
+								</dd>
+							</dl>
+							<dl class="size">
+								<dt>规格</dt>
+								<dd>
+									<a href=""><span>23.5*21.5</span></a>
+								</dd>
+							</dl>
+							<dl class="number">
+								<dt>数量</dt>
+								<dd>
+									<span></span>
+									<em>1</em>
+									<span></span>
+								</dd>
+							</dl>
+							<div>
+								<div class="add">
+									<a href=""></a>
+								</div>
+								<div class="collect">
+									<a href="">
+										<i class="love"></i>
+										<span>收藏</span>
+									</a>
+								</div>
+							</div>
+							<dl class="code">
+								<dt>编码：</dt>
+								<dd>1206297</dd>
+							</dl>
+							<div class="fahuo">此商品由金雀图书专营店进行发货</div>
+							<div class="tips">
+								<ul>
+									<li>满88包邮</li>
+									<li>商家发货</li>
+									<li>支持14天无理由退货</li>
+								</ul>
+							</div>
 						</div>
-						<div class="sharp"></div>
+						<div class="share">
+							<a href="" class="weixin"></a>
+							<a href="" class="sina"></a>
+						</div>
 					</div>
 				</div>
 				
