首页 列表页 详情页静态页面基本完成

--- a/src/html/mia-product.html
+++ b/src/html/mia-product.html
@@ -206,7 +206,7 @@
 					</div>
 				</div>
 								
-				<div class="introduction">
+				<div class="introduction clearfix">
 					<div class="left">
 						<div class="pubtitle">看了又看</div>
 						<div class="pubcell">
@@ -216,18 +216,18 @@
 								<span>¥35.00</span>
 							</div>
 							<div class="block">
-								<a href=""><img src="img/product-pub1.jpg" alt="" /></a>
+								<a href=""><img src="img/product-pub2.jpg" alt="" /></a>
 								<p><a href="">"《小狐狸绘本》情商教育管理绘本6册"</a></p>
 								<span>¥35.00</span>
 							</div>
 							<div class="block">
-								<a href=""><img src="img/product-pub1.jpg" alt="" /></a>
+								<a href=""><img src="img/product-pub3.jpg" alt="" /></a>
 								<p><a href="">"《小狐狸绘本》情商教育管理绘本6册"</a></p>
 								<span>¥35.00</span>
 							</div>
 							<div class="block">
-								<a href=""><img src="img/product-pub1.jpg" alt="" /></a>
-								<p><a href="">"《小狐狸绘本》情商教育管理绘本6册"</a></p>
+								<a href=""><img src="img/product-pub4.jpg" alt="" /></a>
+								<p><a href="">""美国凯迪克大奖启发幼儿童情商绘本故事图画书0-1-2"</a></p>
 								<span>¥35.00</span>
 							</div>
 							<div class="block">
@@ -254,7 +254,7 @@
 							</div>
 						</div>
 						<div class="introcontent">
-							<div class="clearfix">
+							<div class="fill clearfix">
 								<ul>
 									<li>
 										<b>商品名称:</b>
@@ -301,9 +301,14 @@
 								</div>
 								<div class="datashow">
 									<div class="datatitle">
-										
+										<img src="img/product-data1.gif" alt="商品详情" />
 									</div>
-									<img src="" alt="" />
+									<img src="img/product-show1.jpg" alt="" />
+									<img src="img/product-show2.jpg" alt="" />
+									<img src="img/product-show3.jpg" alt="" />
+									<img src="img/product-show4.jpg" alt="" />
+									<img src="img/product-show5.jpg" alt="" />
+									<img src="img/product-show6.jpg" alt="" />
 								</div>
 							</div>
 						</div>
