--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 	<div id = "header" class="header clearfix">
 		<div class="user-bg clearfix">
 		<div class="header-user w1100">
-			<a href="#" target="_blank" title="手机蜜芽" class="user-moblie"><i class="user-icon">图</i>手机蜜芽</a>
+			<a href="#" target="_blank" title="手机蜜芽" class="user-moblie"><i class="user-icon"></i>手机蜜芽</a>
 			<div class = "user-welcome">
 				<span class="">你好，欢迎来到蜜芽！</span><a href="#" title="点击登录" rel="nofollow">登录</a><em>|</em><a href="#" title="点击注册" rel="nofollow">免费注册</a><a href="#" target="_blank">帮助中心</a>
 			</div>
