--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>蜜芽-首页</title>
+		<!--CSS样式-->
 		<link rel = "stylesheet" type = "text/css" href = "css/reset.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "css/common.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "css/index.css"/>
-	</head>
+		<!--JS JQ 插件代码链接-->
+		<script src="js/jquery-1.12.0.js"></script>
+		<script src="js/index.js"></script>
+	</head>	
 	<body>
 		
 <div id = "wrap" class="wrap">
