首页 列表页 详情页静态效果完成，详情页放大镜效果完成

--- a/src/html/mia-product.html
+++ b/src/html/mia-product.html
@@ -10,15 +10,19 @@
 		<!--JS JQ 插件代码链接-->
 		<script src="../js/jquery-1.12.0.js"></script>
 		<script src='../js/jquery.elevateZoom.js'></script>
-		
-			
+		<script src="../js/mia-product.js"></script>
+				
 		<!--当前网页JS代码-->
 		<script type="text/javascript">
-			$(function(){
-				//使用放大镜效果插件
-				$('#zoom-01').elevateZoom({});
-			})			
+					
 		</script>
+		
+		<!--当前页面CSS样式-->
+		<style type="text/css">
+			.border{border: 1px solid red !important;}
+			.showimg{display: block;}
+			.hideimg{display: none;}
+		</style>
 		
 	</head>
 	<body>
@@ -108,7 +112,10 @@
 				<div class="detail clearfix">
 					<div class="left">
 						<div class="big">
-							<img id="zoom-01" src="img/product-big1.jpg"  data-zoom-image="img/large/product-putbig1.jpg">
+							<img id="zoom-0" src="img/product-big1.jpg"  data-zoom-image="img/large/product-putbig1.jpg">
+							<img id="zoom-1" src="img/product-big2.jpg"  data-zoom-image="img/large/product-putbig2.jpg">
+							<img id="zoom-2" src="img/product-big3.jpg"  data-zoom-image="img/large/product-putbig3.jpg">
+							<img id="zoom-3" src="img/product-big4.jpg"  data-zoom-image="img/large/product-putbig4.jpg">
 						</div>
 						<div class="small">
 							<img src="img/product-big1.jpg" />
