静态页面完成首页 列表页 详情页 登录注册页 还差一个购物车 详情页面的放大镜动态效果已经完成

--- a/src/html/mia-product.html
+++ b/src/html/mia-product.html
@@ -7,15 +7,13 @@
 		<link rel = "stylesheet" type = "text/css" href = "../css/reset.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "../css/common.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "../css/mia-product.css"/>
+		
 		<!--JS JQ 插件代码链接-->
 		<script src="../js/jquery-1.12.0.js"></script>
 		<script src='../js/jquery.elevateZoom.js'></script>
+		
+		<!--当前网页专用JS代码-->
 		<script src="../js/mia-product.js"></script>
-				
-		<!--当前网页JS代码-->
-		<script type="text/javascript">
-					
-		</script>
 		
 		<!--当前页面CSS样式-->
 		<style type="text/css">
@@ -26,7 +24,7 @@
 		
 	</head>
 	<body>
-	<!--<img id="zoom_01" src='images/small/image1.png' data-zoom-image="images/large/image1.jpg"/>-->	
+		
 <div id = "wrap" class="wrap">
 		
 	<div id = "header" class="header clearfix">
