正在做首页轮播图 出现bug 已经找到问题 正在寻找解决方法

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,13 @@
 		<!--JS JQ 插件代码链接-->
 		<script src="js/jquery-1.12.0.js"></script>
 		<script src="js/index.js"></script>
+		<!--<script src="js/banner-picMove.js"></script>-->
+		
+		<!--当前页面所用JS-->
+		<script type="text/javascript">
+			
+		</script>
+		
 	</head>	
 	<body>
 		
@@ -85,7 +92,20 @@
 		</div>
 	</div>
 
-	<div id = "banner" class = "banner">		
+	<div id = "banner" class = "banner">
+		<div id="middle" class="middle">
+			<div class="run">
+			
+			</div>
+			<div class="runbox">
+				<span class="runboxNum">
+					<i></i>
+					<i></i>
+					<i></i>
+					<i></i>				
+				</span>
+			</div>
+		</div>
 	</div>
 
 	<div id = "content" class = "content w1100 clearfix">
