首页轮播图效果初步完成，但是存在一些不足，时间关系暂时留着，准备开始做列表页动态与购物车静态

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 		<!--<script src="js/banner-picMove.js"></script>-->
 		
 		<!--当前页面所用JS-->
-		<script type="text/javascript">
+		<script type="text/javascript">			
 			
 		</script>
 		
@@ -95,11 +95,14 @@
 	<div id = "banner" class = "banner">
 		<div id="middle" class="middle">
 			<div class="run">
-			
+				<div><a href=""></a></div>
+				<div><a href=""></a></div>
+				<div><a href=""></a></div>
+				<div><a href=""></a></div>
 			</div>
 			<div class="runbox">
 				<span class="runboxNum">
-					<i></i>
+					<i style="background: deeppink;"></i>
 					<i></i>
 					<i></i>
 					<i></i>				
