--- a/src/html/mia-list.html
+++ b/src/html/mia-list.html
@@ -2,10 +2,15 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>蜜芽-列表页</title>
+		<title>蜜芽-列表页</title
+		<!--CSS样式-->
 		<link rel = "stylesheet" type = "text/css" href = "../css/reset.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "../css/common.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "../css/mia-list.css"/>
+		<!--引入JS JQ代码块-->
+		<script src="../js/jquery-1.12.0.js"></script>
+		<script src="../js/mia-list.js"></script>
+		
 	</head>
 	<body>
 		
@@ -272,86 +277,6 @@
 						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
 					</div>
 				</div>
-				<div class="goods">
-					<div class="goods-show">
-						<div class="goods-pic">
-							<span>全球购</span>
-						</div>
-						<a href=""><img src="img/list-nfkind4.jpg" alt="" /></a>
-					</div>
-					<div class="goods-price">
-						<span class="p1">¥</span>
-						<span class="p2">536.00</span>
-						<span class="p3">¥1032.00</span>
-					</div>
-					<div class="goods-text">
-						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
-					</div>
-				</div>
-				<div class="goods">
-					<div class="goods-show">
-						<div class="goods-pic">
-							<span>全球购</span>
-						</div>
-						<a href=""><img src="img/list-nfkind1.jpg" alt="" /></a>
-					</div>
-					<div class="goods-price">
-						<span class="p1">¥</span>
-						<span class="p2">536.00</span>
-						<span class="p3">¥1032.00</span>
-					</div>
-					<div class="goods-text">
-						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
-					</div>
-				</div>
-				<div class="goods">
-					<div class="goods-show">
-						<div class="goods-pic">
-							<span>全球购</span>
-						</div>
-						<a href=""><img src="img/list-nfkind2.jpg" alt="" /></a>
-					</div>
-					<div class="goods-price">
-						<span class="p1">¥</span>
-						<span class="p2">536.00</span>
-						<span class="p3">¥1032.00</span>
-					</div>
-					<div class="goods-text">
-						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
-					</div>
-				</div>
-				<div class="goods">
-					<div class="goods-show">
-						<div class="goods-pic">
-							<span>全球购</span>
-						</div>
-						<a href=""><img src="img/list-nfkind3.jpg" alt="" /></a>
-					</div>
-					<div class="goods-price">
-						<span class="p1">¥</span>
-						<span class="p2">536.00</span>
-						<span class="p3">¥1032.00</span>
-					</div>
-					<div class="goods-text">
-						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
-					</div>
-				</div>
-				<div class="goods">
-					<div class="goods-show">
-						<div class="goods-pic">
-							<span>全球购</span>
-						</div>
-						<a href=""><img src="img/list-nfkind4.jpg" alt="" /></a>
-					</div>
-					<div class="goods-price">
-						<span class="p1">¥</span>
-						<span class="p2">536.00</span>
-						<span class="p3">¥1032.00</span>
-					</div>
-					<div class="goods-text">
-						<a href="">德国原装 Aptamil 婴儿配方奶粉pre段0~6M 800g*4罐</a>
-					</div>
-				</div>
 				
 			</div>
 		</div>
@@ -361,7 +286,7 @@
 				荷兰原装
 				<em>Nutrilon</em>
 			</div>
-			<div class="kind-list clearfix">
+			<div class="kind-list DE-json clearfix">
 				<div class="show">
 					<img src="img/list2-kindshow.jpg"/>
 				</div>
