--- a/src/html/mia-cart.html
+++ b/src/html/mia-cart.html
@@ -6,6 +6,7 @@
 		<!--引入CSS样式-->
 		<link rel = "stylesheet" type = "text/css" href = "../css/reset.css"/>
 		<link rel = "stylesheet" type = "text/css" href = "../css/common.css"/>
+		<link rel = "stylesheet" type = "text/css" href = "../css/mia-cart.css"/>
 		<!--引入JS JQ代码块-->
 		<script src="../js/jquery-1.12.0.js"></script>
 		
@@ -35,7 +36,7 @@
 		
 <div id = "wrap" class="wrap">
 		
-	<div id = "header" class="header clearfix">
+	<div id = "header" class="header cart-header clearfix">
 		<div class="user-bg clearfix">
 		<div class="header-user w1100">
 			<a href="#" target="_blank" title="手机蜜芽" class="user-moblie"><i class="user-icon">图</i>手机蜜芽</a>
@@ -58,7 +59,90 @@
 		</div>		
 	</div>
 	
+	<div id="cart" class="cart w1000">
+		<div class="c-title">
+			<span>我的购物车</span>
+		</div>
+		<div class="c-menu">
+			<div class="allm cm0 l">
+				<div class='inputwarp ischeck l'>
+					<input class="c-check" type="checkbox" value="0" data-checktype='0'>
+				</div>
+				<label>全选</label>
+			</div>
+			<div class="allm cm1 l">商品</div>
+			<div class="allm cm2 l">规格</div>
+			<div class="allm cm3 l">单价</div>
+			<div class="allm cm4 l">数量</div>
+			<div class="allm cm5 l">小计</div>
+			<div class="allm cm6 l">操作</div>
+		</div>
+		<div class="c-main">
+			<div class="store">
+				<div class="inputwarp">
+					<input class="c-check" type="checkbox" />
+				</div>
+				<div class="store-name">
+					<span>新华雅博图书专营店</span>
+				</div>
+			</div>
+			
+			<div class="items">
+				<div class="inputwarp it-check">
+					<input class="c-check" type="checkbox" />
+				</div>
+				<div class="it-img">
+					<a href="">
+						<img src="img/cart-small.jpg" alt="商品图片" />
+					</a>
+				</div>
+				<div class="it-p l">
+					<p class="it-p1">
+						<a href="#">宝宝蛋 袋鼠妈妈婴儿第一套视觉翻翻书 全4册</a>
+					</p>
+					<p class="it-p2">商品编号：1165196</p>
+				</div>
+				<div class="it-size l">156*176mm 24开</div>
+				<div class="it-price l">
+					<p>14.00</p>
+					<p class="oldprice">21.60</p>
+				</div>
+				<div class="it-num l">
+					<span class="minus"></span>
+					<input class="it-num1" type="text" value="1" readonly="readonly" />
+					<span class="plus"></span>
+				</div>
+				<div class="it-total l">
+					<span>&yen;14</span>
+				</div>
+				<div class="it-del l">
+					<a href="">删除</a>
+				</div>
+			</div>
+		</div>
+		
+		<div class="c-pay">
+			<div class="pay1">
+				<div class="inputwarp">
+					<input class="c-check" type="checkbox" />
+				</div>
+				<label for="">全选</label>
+				<a href="">删除选择商品</a>
+				<a href="">清除无效商品</a>
+				<a href="">移入收藏夹</a>
+			</div>
+			<div class="pay2">
+				<span>已选择商品 <label for="">1</label>件</span>
+				<span>合计（不含运费和进口税）：<label for="">&yen;14</label></span>
+			</div>
+			<a class="pay3" href="">去结算</a>
+		</div>
+		
+	</div>
 	
+	<div id="like" class="like">
+		
+	</div>
 
 	<div id = "footer" class="footer">
 		
